usecase-4/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: grafana-svc
  namespace: monitoring

spec:
  type: LoadBalancer

  selector:
    app: grafana
    component: dashboard

  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
