usecase-4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: grafana-web
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  rules:
  - host: "monitoring.mycompany.com"
    http:
      paths:
      - path: "/grafana"
        pathType: Prefix
        backend:
          service:
            name: grafana-svc
            port:
              number: 80
